--- a/views/user/history.hbs
+++ b/views/user/history.hbs
@@ -8,62 +8,82 @@
 
                     {{#if orders}}
                     {{#each orders}}
-                    <ul class="unit">
-                        <li class="text-center"><span>Item</span></li>
-                        <li class="text-center"><span>Product Name</span></li>
-                        {{!-- <li></li> --}}
-                        <li class="text-center"><span>Unit Price</span></li>
-                        <div class="clearfix"> </div>
-                    </ul>
+                    <div class="history-item">
+                        <ul class="unit">
+                            <li class="text-center"><span>Item</span></li>
+                            <li class="text-center"><span>Product Name</span></li>
+                            {{!-- <li></li> --}}
+                            <li class="text-center"><span>Unit Price</span></li>
+                            <div class="clearfix"> </div>
+                        </ul>
 
-                    {{#each this.detailProduct}}
-                    <ul class="cart-header history-cart-header">
-                        <li class="ring-in"><a href="/product/{{this.slug}}"><img src="{{this.image.[0].secure_url}}"
-                                    width="100px" height="100px" class="img-responsive history-img" alt=""></a>
-                        </li>
-                        <li><span class="item-name">{{this.name}}</span></li>
-                        <li><span class="item_price">$ {{this.price}}</span></li>
+                        {{#each this.detailProduct}}
+                        <ul class="cart-header history-cart-header">
+                            <li class="ring-in"><a href="/product/{{this.slug}}"><img
+                                        src="{{this.image.[0].secure_url}}" width="100px" height="100px"
+                                        class="img-responsive history-img" alt=""></a>
+                            </li>
+                            <li><span class="item-name">{{this.name}}</span></li>
+                            <li><span class="item_price">$ {{this.price}}</span></li>
 
-                        <div class="clearfix"> </div>
-                    </ul>
-                    {{/each}}
-                    <div class="row history-info">
-                        <div class="col-md-6 col-sm-5">
-                            <div class="row">
-                                <div class="col-md-1"></div>
-                                <div class="col-md-4 col-sm-6 col-xs-6">
-                                    <div><strong>Name:</strong></div>
-                                    <div><strong>Number:</strong></div>
-                                    <div><strong>Address:</strong></div>
-                                    <div><strong>Payment:</strong></div>
-                                </div>
-                                <div class="col-md-7 col-sm-6 col-xs-6">
-                                    <div>{{this.name}}</div>
-                                    <div>{{this.number}}</div>
-                                    <div>{{this.address}}</div>
-                                    <div>{{this.payment}}</div>
+                            <div class="clearfix"> </div>
+                        </ul>
+                        {{/each}}
+                        <div class="row history-info">
+                            <div class="col-md-6 col-sm-5">
+                                <div class="row">
+                                    <div class="col-md-1"></div>
+                                    <div class="col-md-4 col-sm-6 col-xs-6">
+                                        <div><strong>Name:</strong></div>
+                                        <div><strong>Number:</strong></div>
+                                        <div><strong>Address:</strong></div>
+                                        <div><strong>Payment:</strong></div>
+                                    </div>
+                                    <div class="col-md-7 col-sm-6 col-xs-6">
+                                        <div>{{this.name}}</div>
+                                        <div>{{this.number}}</div>
+                                        <div>{{this.address}}</div>
+                                        {{#if (compare this.payment 'COD')}}
+                                        <div>Cash on delivery</div>
+                                        {{/if}}
+                                        {{#if (compare this.payment 'CC')}}
+                                        <div>Credit card</div>
+                                        {{/if}}
+                                        {{#if (compare this.payment 'DC')}}
+                                        <div>Debit card</div>
+                                        {{/if}}
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-md-6 col-sm-7">
-                            <div class="row">
-                                <div class="col-md-2 col-sm-2"></div>
-                                <div class="col-md-5 col-sm-5 col-xs-6">
-                                    <div><strong>Checkout date:</strong></div>
-                                    <div><strong>Received date:</strong></div>
-                                    <div><strong>Ship:</strong></div>
-                                    <div><strong>Total price:</strong></div>
-                                </div>
-                                <div class="col-md-5 col-sm-5 col-xs-6">
-                                    <div>{{this.checkoutDate}}</div>
-                                    <div>{{this.receivedDate}}</div>
-                                    <div>$ {{this.ship}}</div>
-                                    <div>$ {{this.total}}</div>
+                            <div class="col-md-6 col-sm-7">
+                                <div class="row">
+                                    <div class="col-md-2 col-sm-2"></div>
+                                    <div class="col-md-5 col-sm-5 col-xs-6">
+                                        <div><strong>Checkout date:</strong></div>
+                                        {{#if (compare this.status 'received')}}
+                                        <div><strong>Received date:</strong></div>
+                                        {{/if}}
+                                        <div><strong>Ship:</strong></div>
+                                        <div><strong>Total price:</strong></div>
+                                        {{#if (compare this.status 'cancel')}}
+                                        <div><strong>Status:</strong></div>
+                                        {{/if}}
+                                    </div>
+                                    <div class="col-md-5 col-sm-5 col-xs-6">
+                                        <div>{{this.checkoutDate}}</div>
+                                        {{#if (compare this.status 'received')}}
+                                        <div>{{this.receivedDate}}</div>
+                                        {{/if}}
+                                        <div>$ {{this.ship}}</div>
+                                        <div>$ {{this.total}}</div>
+                                        {{#if (compare this.status 'cancel')}}
+                                        <div><strong>Cancelled</strong></div>
+                                        {{/if}}
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-
                     {{/each}}
                     {{/if}}
                 </div>
