--- a/views/user/history.hbs
+++ b/views/user/history.hbs
@@ -77,7 +77,7 @@
                                         <div>$ {{this.ship}}</div>
                                         <div>$ {{this.total}}</div>
                                         {{#if (compare this.status 'cancel')}}
-                                        <div><strong>Cancelled</strong></div>
+                                        <div><strong>Canceled</strong></div>
                                         {{/if}}
                                     </div>
                                 </div>
