--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -19,7 +19,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
   <link href='//fonts.googleapis.com/css?family=Hind:400,500,300,600,700' rel='stylesheet' type='text/css'>
   <link href='//fonts.googleapis.com/css?family=Oswald:400,700,300' rel='stylesheet' type='text/css'>
   {{!-- favicon --}}
-  <link rel="icon" href="/images/logo1.png">"
+  <link rel="icon" href="/images/logo1.png">
   <!-- start-smoth-scrolling -->
   {{!--
   <script type="text/javascript" src="/js/move-top./js"></script>
@@ -60,6 +60,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               <!--/.navbar-header-->
               <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
+                  <li><a href="/">Home</a></li>
                   <li><a href="/product/all">All</a></li>
                   <li><a href="/product/men">Men</a></li>
                   <li><a href="/product/women">Women</a></li>
