add sale and all to homepage

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -16,28 +16,43 @@
     </div>
 </div>
 <!--banner end here-->
-<!--block-layer2 start here-->
-<div class="blc-layer2">
-    <div class="container">
-        <div class="blc-layer2-main">
-            <div class="col-md-6 blc-layer2-left">
-                <h3>About us</h3>
-                <p>We deliver quality fashion items for men and women with great services. </p>
-            </div>
-            <div class="col-md-6 blc-layer2-right">
-
-            </div>
-            <div class="clearfix"> </div>
-        </div>
-    </div>
-</div>
-<!--block-layer2 end here-->
 <!--block-layer3 start here-->
 <div class="blc-layer3">
+    <div class="row justify-content-center">
+        <div class="col-md-12 text-center pt-4" >
+            <h2 style="margin-top:10px">Categories</h2>
+        </div>
+    </div>
     <div class="container">
-        <div class="row">
+        <div class="row"style ="display:flex">
             <div class="col-sm-6 col-md-6 col-lg-4 mb-5 mb-lg-0 aos-init aos-animate" data-aos="fade"
-                data-aos-delay="100"style="margin-left:50px"> 
+                data-aos-delay="100"> 
+                <a class="block-2-item" href="/product/all">
+                    <figure class="image">
+                        <img src="/images/all.jpg" alt="" class="img-fluid" 
+                             >
+                    </figure>
+                    <div class="text-categories">
+                        <span class="text-uppercase">Collections</span>
+                        <h3>All</h3>
+                    </div>
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-6 col-lg-4 mb-5 mb-lg-0 aos-init aos-animate" data-aos="fade"
+                data-aos-delay="100"> 
+                <a class="block-2-item" href="/product/sale">
+                    <figure class="image">
+                        <img src="/images/discount.png" alt="" class="img-fluid" 
+                             >
+                    </figure>
+                    <div class="text-categories">
+                        <span class="text-uppercase">Collections</span>
+                        <h3>Sale</h3>
+                    </div>
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-6 col-lg-4 mb-5 mb-lg-0 aos-init aos-animate" data-aos="fade"
+                data-aos-delay="100"> 
                 <a class="block-2-item" href="/product/women">
                     <figure class="image">
                         <img src="/images/woman.jpg" alt="" class="img-fluid" 
@@ -50,7 +65,7 @@
                 </a>
             </div>
             <div class="col-sm-6 col-md-6 col-lg-4 mb-5 mb-lg-0 aos-init aos-animate" data-aos="fade"
-                data-aos-delay="100" style="margin-left:300px">
+                data-aos-delay="100" >
                 <a class="block-2-item" href="/product/men">
                     <figure class="image">
                         <img src="/images/man.jpg" alt="" class="img-fluid"
