change cover of homepage

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,12 +2,10 @@
 <div class="banner">
     <div class="container">
         <div class="banner-main">
-            <div class="col-md-6 banner-left">
-                <a href="/product"><img src="/images/ba.png" alt="" class="img-responsive"></a>
-            </div>
-            <div class="col-md-6 banner-right simpleCart_shelfItem">
+            <div class="col-md-6 banner-right simpleCart_shelfItem" style="background:white">
                 <h2>Welcome to our store</h2>
                 <h1>Up to 50% Discount</h1>
+                <h5>We delivered high-end fashion items from handbag and watch for men and women.</h5>
                 <ul class="bann-btns">
                     <li><a href="/product/all" class="item_add">Shop now</a></li>
             </div>
